# shopease_analysis

./: .readthedocs.yaml  .readthedocs.yml  README.md  app.py  business_problem.docx  mkdocs.yml  pyproject.toml  readthedocs.yml  requirements.txt  test.py  utils.py
docs/: Categories_and_Items.md  Customer_Segmentation_model.md  Prices_and_Brands.md  index.md
eda_findings/: mkdocs.yml
eda_findings/docs/: Categories_and_Items.md  Customer_Segmentation_model.md  Time_Distribution_Analysis.md  brand_analysis_extended.md  home.md  requested_analysis_extended.md
pages/: brand_analysis_extended.py  categories_and_items.py  data_intro.py  doc_redirection_page.py  home.py  intro.py  prices_and_brands_analysis.py  rfm_model.py  suggested_items_analysis.py  time_distribution_analysis.py
site/: 404.html  index.html  sitemap.xml
site/Categories_and_Items/: index.html
site/Customer_Segmentation_model/: index.html
site/Prices_and_Brands/: index.html
site/Time_Distribution_Analysis/: index.html
site/brand_analysis_extended/: index.html
site/home/: index.html
site/requested_analysis_extended/: index.html
site/search/: search_index.json
