[tool.poetry]
name = "ecommerce_analysis"
version = "0.1.0"
description = ""
authors = ["Sherwin-14 <varghesesheriwn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
plotly = "^5.23.0"
scikit-learn = "^1.5.1"
dask = "^2024.7.1"
polars = "^1.2.1"
numpy = "^2.0.1"
streamlit-shadcn-ui = "^0.1.18"
streamlit = "^1.37.0"
seaborn = "^0.13.2"
streamlit-on-hover-tabs = "^1.0.1"
mysql-connector-python = "^9.0.0"
line-profiler = "^4.1.3"
wordcloud = "^1.9.3"
mkdocs-material = "^9.5.30"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
